# python-package-template

./: .gitignore  LICENSE  README.md  setup.cfg
mypackage/: mymodule.py
src/mypackage/: __init__.py
