[metadata]
name = mypackage
version = 0.0.0
author = Your Name
author_email = your-email@email.com
description = Some short description
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
packages = find:
package_dir =
    =src
install_requires =
    pandas
    numpy
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

